# Evaluator

./: .coderabbit.yaml  .cursorrules  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  AUDIT_CORRECTIONS_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CONTEXT-MAP.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  codecov.yml  makefile  pyproject.toml  pyrightconfig.json  sonar-project.properties  update_mapping_toml.py  update_readme_version.py  update_release.py  update_tasks_table.py  workshop.md
docs/: CONTRIBUTING.md  Makefile  autodoc2_docstrings_parser.py  broken_links_false_positives.json  conf.bak  conf.py  custom-task.md  deployment-patterns.md  deployment-patterns.mdx  documentation.md  evaluation-adapters.md  evaluation-doc.md  evaluation-hf.md  evaluation-with-ray.md  evaluation_doc.md  false_positives.json  harness-integration-report.md  index.md  index.mdx  index.rst  logprobs.md  old_index.md  optional-eval-package.md  project.json  pyproject.toml  requirements.txt  result-format.md  result-format.mdx  scripts.md  usability-report.md  versions1.json
docs/_build/html/: custom-task.html  evaluation-adapters.html  evaluation-doc.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_extensions/: __init__.py  autogen_api_docs.py  autogen_runner.py  myst_codeblock_substitutions.py  toctree_substitutions.py
docs/_extensions/ai_assistant/: __init__.py
docs/_extensions/content_gating/: __init__.py  condition_evaluator.py  conditional_directives.py  document_filter.py
docs/_extensions/json_output/: __init__.py  config.py  utils.py
docs/_extensions/search_assets/: __init__.py
docs/_resources/: tasks-table.md
docs/_resources/harnesses_autogen/: bfcl.md  bigcode-evaluation-harness.md  garak.md  helm.md  hle.md  ifbench.md  livecodebench.md  lm-evaluation-harness.md  mtbench.md  profbench.md  safety-eval.md  scicode.md  simple-evals.md  tooltalk.md  vlmevalkit.md
docs/_templates/: autodoc2_index.rst  autogen_api_index.rst
docs/_templates/autosummary/: class.rst  module.rst
docs/about/: Eval.code-workspace  configuration.md  configuration.mdx  index.md  key-features.md  key-features.mdx  telemetry.md  telemetry.mdx
docs/about/concepts/: adapters-interceptors.md  adapters.md  adapters.mdx  architecture.md  configuration-model.md  deployment-concepts.md  evaluation-model.md  evaluation-output.md  evaluation-output.mdx  execution-backend.md  execution-backend.mdx  framework-definition-file.md  framework-definition-file.mdx  index.md  index.mdx  interceptors.md
docs/about/release-notes/: index.md
docs/agents/: domain.md  issue-tracker.md
docs/api/: index.md  index.mdx
docs/apireference/: index.md  index.rst  nemo-evaluator-adapters.rst  nemo-evaluator-api-dataclasses.rst  nemo-evaluator-interceptors.rst  nemo-evaluator.md
docs/apireference/nemo-evaluator/: index.md
docs/architecture/: aws-ecs-sandbox.md  aws-ecs-sandbox.mdx  index.md  index.mdx  sandbox.md  sandbox.mdx
docs/deployment/: adapters.md  ci-regression.md  ci-regression.mdx  docker.md  docker.mdx  index.md  index.mdx  kubernetes.md  kubernetes.mdx  local.md  local.mdx  pytriton.md  ray-serve.md  ray.md  ray.mdx  slurm.md  slurm.mdx
docs/deployment/adapters/: client-mode.md  client-mode.mdx  configuration.md  index.md  index.mdx  usage.md  usage.mdx
docs/deployment/bring-your-own-endpoint/: enterprise-infrastructure.md  hosted-services.md  index.md  index.mdx  manual-deployment.md  manual-deployment.mdx  pytriton.md  ray-serve.md  testing-endpoint-oai-compatibility.md  testing-endpoint-oai-compatibility.mdx
docs/deployment/launcher-orchestrated/: index.md  lepton.md  lepton.mdx  local.md  local.mdx  slurm.md
docs/deployment/nemo-fw/: hf.md  hf.mdx  index.md  index.mdx  mbridge.md  pytriton.md  pytriton.mdx  ray.md  trtllm.md  trtllm.mdx
docs/evaluation/: benchmarks.md  benchmarks.mdx  custom-task.md  custom-task.mdx  custom-tasks.md  index.md  logprobs.md  nemo-fw-multimodal.md  nemo-fw-multimodal.mdx  nemo-fw-optional-package.md  nemo-fw-optional-package.mdx  parameters.md  parameters.mdx  scoring.md  scoring.mdx  tasks-catalog.md  troubleshooting.md
docs/evaluation/_snippets/: MIGRATION-SUMMARY.md  README.md  bfcl.py  garak.py  piqa_hf.py  polemo2.py  vlmeval_ocrbench.py
docs/evaluation/benchmarks/: about.md  (+3 more)
docs/fern/: docs.yml
docs/get-started/: index.md  index.mdx  install.md  install.mdx  integration-patterns.md  quickstart.md  quickstart.mdx
docs/html/: .buildinfo  documentation.html  logprobs.html  scripts.html
docs/libraries/: index.md
docs/nemo-evaluator/: index.md
docs/nemo-evaluator-launcher/: index.md  quickstart.md  tutorial.md
docs/nemo-fw/: custom-task.md  evaluation-doc.md  evaluation-hf.md  evaluation-mbridge.md  evaluation-with-ray.md  index.md  logprobs.md  optional-eval-package.md
docs/references/: deployment-api.md  evaluation-utils.md  evaluation-utils.mdx  faq.md  faq.mdx  index.md  index.mdx
docs/regression/: quality-gate.md  run-regressions.md
docs/scripts/: README.md  api_reference_prose.py  generate_api_reference_mdx.py  test_generate_api_reference_mdx.py
docs/troubleshooting/: authentication.md  common-issues.md  configuration-issues.md  debugging-guide.md  deployment-issues.md  index.md  index.mdx  installation-issues.md  launcher-issues.md  performance-issues.md
docs/tutorials/: adapters.md  adapters.mdx  byob.md  byob.mdx  compare.md  compare.mdx  config-composition.md  config-composition.mdx  continuous-checkpoint-evaluation.md  continuous-checkpoint-evaluation.mdx  create-framework-definition-file.md  distributed-eval.md  distributed-eval.mdx  gym-integration.md  gym-integration.mdx  index.md  index.mdx  legacy-containers.md  legacy-containers.mdx  local-evaluation-of-existing-endpoint.md  local-evaluation-of-existing-endpoint.mdx  local_evaluation_of_existing_endpoint.md  quality-gate.md  quality-gate.mdx  regression-ci.md  skills-integration.md  skills-integration.mdx  testing_endpoint_oai_compatibility.md  walkthrough.md  walkthrough.mdx
(+1621 files in other folders)
