[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nemo-evaluator"
version = "0.12.0"
description = "NeMo Evaluator – benchmark environments, evaluation runner, and decision-grade scoring"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "aiohttp>=3.9",
    "pyyaml>=6.0",
    "click>=8.0",
    "numpy>=1.24",
    "datasets>=2.14",
]

[project.optional-dependencies]
scoring = ["sympy>=1.12"]
stats = ["scipy>=1.10"]
ray = ["ray[default]>=2.9"]
skills = ["nemo-skills @ git+https://github.com/NVIDIA-NeMo/Skills.git"]
lm-eval = ["lm_eval>=0.4"]
harbor = ["harbor"]
proxy = ["litellm[proxy]"]
inspect = ["inspect_ai"]
export = ["wandb", "mlflow"]
harnesses = ["nemo-evaluator[lm-eval]"]
all = ["nemo-evaluator[scoring,stats,ray,lm-eval,harbor,proxy]"]
docs = [
    "sphinx",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "nvidia-sphinx-theme",
    "sphinxcontrib-mermaid",
    "sphinx-design",
    "myst-parser",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-xdist>=3.0",
    "ruff>=0.1",
    "pre-commit>=3.0",
    "nemo-evaluator[scoring,stats,lm-eval]",
]

[project.scripts]
nel = "nemo_evaluator.cli.main:cli"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nemo_evaluator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "network: tests that download from HF or hit external services (deselect via: -m 'not network')",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 120
target-version = "py310"
