[project]
name = "nemo-evaluator-docs"
# NOTE(martas): this version num shouldn't matter for docs versioning
version = "0.2.0"
description = "Documentation tooling dependencies for NeMo Evaluator"
requires-python = ">=3.10,<3.14"

[dependency-groups]
docs = [
    "griffe>=2.0.2",
    "nemo-evaluator-launcher",
    "nemo-evaluator",
    "ruff>=0.9.9",
]

[tool.uv.sources]
nemo-evaluator-launcher = { path = "../packages/nemo-evaluator-launcher", editable = true }
nemo-evaluator = { path = "../packages/nemo-evaluator", editable = true }

[tool.setuptools]
packages = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
